--- a/AscuOnTop/PRACTICA 3/deportes.html
+++ b/AscuOnTop/PRACTICA 3/deportes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Gustos</title>
-    <link rel="stylesheet" href="stylemusica.css">
+    <link rel="stylesheet" href="styledeportes.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,6 @@
         <section class="presentacion">
             <h2>Mi deporte</h2>
             <p>Hablando de deportes mi deporte favorito es el futbol, aunque ultimamente tambien me empezo a gustar el baseball, como uno de mis equipos favoritos del futbol es el real madrid y claramente mi mayor referente de ese deporte y se podria decir que idolo mio es el gran comandante cristiano ronaldo.</p>
-            <p></p>
             <img src="Assets\Realmadrid.webp" alt="Real Madrid">
             <img src="Assets\CR7.webp" alt="CR7l">
 
@@ -36,8 +35,11 @@
 
     <!-- Lateral derecho -->
         <aside class="lateral">
-            <h3>Ranking Albumes</h3>
+            <h3>Ranking Deportes</h3>
             <div class="galeria">
+                <li>🥇 Futbol⚽</li>
+                <li>🥈 Basketball🏀</li>
+                <li>🥉 Baseball ⚾</li>
             </div>
         </aside>
     </main>
