--- a/AscuOnTop/PRACTICA 3/index.html
+++ b/AscuOnTop/PRACTICA 3/index.html
@@ -36,9 +36,9 @@
             <h3>Galería</h3>
             <div class="galeria">
                 <img src="Assets\EladioCarrionAlbum.webp" alt="Música">
-                <img src="deporte.jpg" alt="Deporte">
-                <img src="videojuegos.jpg" alt="Videojuegos">
-                <img src="anime.jpg" alt="Anime">
+                <img src="Assets\CR7.webp" alt="Deporte">
+                <img src="Assets\platino.png" alt="Videojuegos">
+                <img src="Assets\asta.webp" alt="Anime">
             </div>
         </aside>
     </main>
