--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -45,7 +45,7 @@
                 <p>Se realizo la pagina de mis pasatiempos favoritos 2, agregando nuevas etiquetas.</p>
                 <ul>
                     <li>
-                        <a href="https://github.com/FDW52AD2025/website52/blob/main/diegoalgosa/Pasatiempos2/INDEX.HTML">Enlace página</a>
+                        <a href="http://127.0.0.1:5501/diegoalgosa/Pasatiempos2/INDEX.HTML">Enlace página</a>
                     </li>
                     <li>
                         <a href="https://github.com/FDW52AD2025/website52/commits/main/diegoalgosa/Pasatiempos2">Enlace commits 27 de agosto</a>
