--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -72,7 +72,7 @@
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commit/2f562a51b410cd022928d0d7af83659642757168">Enlace commits</a>
                     </li>
-                    <li><a href="http://127.0.0.1:5501/diegoalgosa/Pasatiempos2/selectores.html">Enlace pagina de selectores</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/diegoalgosa/Pasatiempos2/selectores.html">Enlace pagina de selectores</a></li>
                 </ul>
             </section>
 
@@ -82,7 +82,7 @@
                 <p>Se creo la imagen solicitada por el maestro utilziando flexbox en un documento html.</p>
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commit/a5ec04ef8c394f90bca2fc61da5fbbe07d043e29">Enlace commits</a>
-                    <li><a href="http://127.0.0.1:5501/diegoalgosa/practica6/index.html">Enlace pagina de selectores</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/diegoalgosa/practica6/index.html">Enlace pagina de diseño utilziando flexbox</a></li>
                     </li>
                 </ul>
             </section>
