--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -35,7 +35,7 @@
                 <p>Realizada el 22 de Agosto del 2025.</p>
                 <p>Se creo la carpeta con mi nombre para trabajar en la organizacion del grupo</p>
                 <ul>
-                    <li><a href="https://github.com/FDW52AD2025/website52/blob/main/diegoalgosa/index.html">Pagina personal</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/diegoalgosa/">Pagina personal</a></li>
                     <li><a href=https://github.com/FDW52AD2025/website52/commit/79d7de93a788f983e79ad6f315d22e7e5525ee06>Commits</a></li>
                 </ul>
             </section>
@@ -45,7 +45,7 @@
                 <p>Se realizo la pagina de mis pasatiempos favoritos 2, agregando nuevas etiquetas.</p>
                 <ul>
                     <li>
-                        <a href="http://127.0.0.1:5501/diegoalgosa/Pasatiempos2/INDEX.HTML">Enlace página</a>
+                        <a href="https://fdw52ad2025.github.io/website52/diegoalgosa/Pasatiempos2/INDEX.HTML">Enlace página</a>
                     </li>
                     <li>
                         <a href="https://github.com/FDW52AD2025/website52/commits/main/diegoalgosa/Pasatiempos2">Enlace commits 27 de agosto</a>
