--- a/diegoalgosa/Pasatiempos2/INDEX.HTML
+++ b/diegoalgosa/Pasatiempos2/INDEX.HTML
@@ -13,11 +13,11 @@
 
   <nav>
     <ul>
-      <li><a href="gym.html">GYM</a></li>
-      <li><a href="series.html">Series</a></li>
-      <li><a href="musica.html">Música</a></li>
-      <li><a href="videojuegos.html">Videojuegos</a></li>
-      <li><a href="amigos.html">Salir con Amigos</a></li>
+      <li><a href="GYM.html">GYM</a></li>
+      <li><a href="SERIES.html">Series</a></li>
+      <li><a href="MUSICA.html">Música</a></li>
+      <li><a href="VIDEOJUEGOS.html">Videojuegos</a></li>
+      <li><a href="AMIGOS.html">Salir con Amigos</a></li>
     </ul>
   </nav>
 
