--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -71,7 +71,10 @@
             <li> <a href="https://github.com/FDW52AD2025/website52/commits/main/MiguelABanda/PaginaSelectores?since=2025-09-08&until=2025-09-10"> Link commits </a></li>
         </ul>
 
-
+        <hr>
+        <h1>PRÁCTICAS EVIDENCIA 2</h1>
+        <h1>PRÁCTICA 1</h1>
+        <p> Esta práctica se hizo en clase 😊</p>
     
     </main>
     <aside></aside>
