Practica 1 Evidencia 2 Realizada en clase

--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -146,6 +146,30 @@
         </section>
 
         <hr>
+        <section>
+            <header>
+                <h2>JAVASCRIPT</h2>
+            </header>
+        </section>
+        <hr>
+
+        <section id="Ev2P1">
+            <article>
+                <header>
+                    <h2>Práctica 1</h2>
+                </header>
+                <p>Se creo un formulario para calcular el area dependiendo nuestra elección sobre un triangulo, rectangulo o cuadrado.</p>
+
+                <p>Enlaces requeridos:</p>
+                <ul>
+                    <li>Enlace commit en clase 06/10/2025: <a href="" target="_blank"></a>modificar</li>
+                </ul>
+
+            </article>
+        </section>
+
+        <hr>
+
 
     </main>
     <aside>
