practica 1 ev2 en clase

--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -11,8 +11,8 @@
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
     <main>
-        <article>
-            <h2>EVIDENCIA 1</h2>
+        <article id="a1">
+                <h2>EVIDENCIA 1</h2>
         <section>
             <h3>Práctica 1</h3>
         <p>En la practica 1 de la evidencia 1, hicimos una sencilla pagina web donde platicamos sobre nuestros pasatiempos favoritos.</p>
@@ -70,6 +70,12 @@
 </a></li>
         </section>
         </article>
+        <article id="a2">
+                <h2>EVIDENCIA 2</h2>
+        <section>
+                <h3>Práctica 1</h3>
+                <p>Practica realizada en clase</p>
+        </section>
     </main>
     <aside></aside>
     <footer></footer>
