Practica Realizada en Clase 06/10/25

--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -74,6 +74,10 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-10&until=2025-09-12" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
+        <hr>
+        <h2>Evidencia 2.</h2>
+        <h3>Práctica 1.</h3>
+        <p>Práctica Realizada en Clase.</p>
     </main>
     <aside></aside>
     <footer>
