--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -61,6 +61,13 @@
                 <button class="boton outline" onclick="window.open('Practica6/index.html', '_blank')">Link Pagina</button>
                 <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-09-10&until=2025-09-12', '_blank')">Commits</button>
             </div>
+            <div class="caja">
+                <h2>Practica 7</h2>
+                <p>Elaboración de formulario para calcular figuras geometricas</p>
+
+                <mark>REALIZADO</mark>
+
+            </div>
         </div>
     </main>
     <footer>Hecho por Abdiel Rafael Aguilar Linares</footer>
