--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -14,6 +14,9 @@
     
     <main>
         <div class="contenedor">
+
+            <h1 id="separador">Evidencia 1</h1>
+
             <div class="seccion-flex">
                 <section>
                     <h2>PRÁCTICA 1</h2>
@@ -78,6 +81,15 @@
                         <li><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/practica6/index.html"> Link Página de diseño solicitado</a></li> 
                         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=victoriabalderas&since=2025-09-10&until=2025-09-11">Link de los commits</a></li>
                     </ul>
+                </section>
+            </div>
+
+            <h1 id="separador">Evidencia 2</h1>
+
+            <div class="seccion-flex">
+                <section>
+                    <h2>PRÁCTICA 1</h2>
+                    <p>Elaboración de calculadora de áreas de figuras utilizando HTML, CSS y JS. Práctica realizada y calificada durante clase el día lunes 6 de octubre.</p>
                 </section>
             </div>
         </div>
