--- a/aaronrdzr/index.html
+++ b/aaronrdzr/index.html
@@ -10,7 +10,7 @@
         <h1>Evidencias Fundamentos de desarollo web</h1>
     </header>
     <main>
-      
+      <h2>Evidencia 1</h2>
       <h2>Practica 1</h2>
       <p>Pagina Web y Commits 13-15 Agosto </p>
       <li><a href="https://github.com/aaronrdzr/Practica1EV1.git" target="_blank">Repositorio Git</a></li>
@@ -38,7 +38,9 @@
       <h2>Practica 6</h2>
       <li><a href="https://fdw52ad2025.github.io/website52/aaronrdzr/practica6/index.html">Link Página Diseño solicitado</a></li>
       <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-09-10&until=2025-09-12">Link Commits</a></li>
-
+      <h2>Evidencia 2</h2>
+      <h2>Practica 1</h2>
+      <p>Ya la realice en clase.</p>
     </main>
     <aside></aside>
     <hr style="background-color: black;">
