Practica realizada en clase

--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -59,7 +59,7 @@
             <h1>Evidencia 2</h1>
             <section>
                 <h2>Práctica 1</h2>
-                <p>Práctica de calculo de áreas de triángulo, rectángulo o cuadrado, realizada en clase</p>
+                <p>Práctica de calculo de áreas de triángulo, rectángulo o cuadrado, realizada en clase el 06/10/2025</p>
             </section>
         </article>
     </main>
