Agregado de los trabajos JS

--- a/KingBootleg/index.html
+++ b/KingBootleg/index.html
@@ -71,6 +71,14 @@
                 <li><a href="https://kingbootleg.github.io/practica-6/">Pagina de los botones</a></li>
             </ul>
         </section>
+
+        <section>
+            <h1>PRACTICAS DE JAVASCRIPT</h1>
+            <h2>Practica 1</h2>
+            <h3>Calculadora con Switch</h3>
+            <p>Pequeña practica de hacer una calculadora con switch y case</p>
+            <p>La practica se termino en el salon el 6 de octubre de 2025</p>
+        </section>
     </main>
 
     <footer>
