Primera practica Ev2 hecha en clase

--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -99,7 +99,28 @@
                 <p><b>Fecha de Commits: 10 al 12 de Septiembre</b></p>
             </article>
         </section>
+        <hr>
 
+        <section>
+            <header>
+                <h2 style="color: rgb(255, 0, 43)">Practica en JavaScript</h2>
+            </header>
+        </section>
+        <hr>
+
+        <section>
+            <h2>Primera Practica Ev2</h2>
+            <article>
+                <p>Creamos una "App" donde calculamos el area de la figura requerida, ya sea del Triangulo, Rectangulo ó Cuadrado.</p>
+                <p><b>Hecho en Clase &#x2705;</b></p>
+                <ul>
+                    <li><a href="">Link Commits</a></li>
+                </ul>
+                <p><b>Fecha de Commits: 6 al 7 de Octubre</b></p>
+            </article>
+        </section>
+
+        
     </main>
     
 </body>
