Practica 1, evidencia 2, realizada en clase.

--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -77,11 +77,13 @@
                 </ul>
         </section>
         </div>
-<!--         <div class="divevidencias">
+        <div class="divevidencias">
         <h1>Evidencia 2</h1>
         <section id="e1">
-            <p>Proximamente...</p>
-        </div> -->
+            <h3>Practica 1 - 06/10/2025 al 07/10/2025</h3>
+            <p>Practica realizada en clase (06-10-2025).</p>
+        </section>
+        </div>
     </main>
     <aside class="asideevidencias">
         <p>Si estás comiendo, ten buen provechito...</p>
