Aside easter egg.

--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -86,7 +86,11 @@
         </div>
     </main>
     <aside class="asideevidencias">
-        <p>Si estás comiendo, ten buen provechito...</p>
+        <pre>
+            Hoy todo es diferente
+            Tú ya cambiaste, yo cambié
+            Y tú cometiste todas esas faltas que tú me negabas
+        </pre>
     </aside>
     <footer class="footerevidencias">
         <address>
