--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Evidencias Fundamentos de Desarrollo Web</h1>
+        <h1>Fundamentos de Desarrollo Web - Practicas Evidencia 1</h1>
     </header>
 
     <hr>
@@ -90,6 +90,23 @@
         <p>Del 10 al 12 de septiembre del 2025</p>
 
         <hr>
+
+    <header>
+        <h1>Fundamentos de Desarrollo Web - Practicas Evidencia 2</h1>
+    </header>
+
+    <hr>
+
+    <main>
+        <h1>Practica 1</h1>
+        <p>
+            En esta primer practica se realizo una calculadora para obtener el area de distintas figuras geometricas.
+        </p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/NerickRamirez?since=2025-10-06&until=2025-10-06">Commits</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 6 al 7 de octubre del 2025</p>
 
         <footer>
             Nerick Ramirez
