--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -11,7 +11,7 @@
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
     <main>
-        <h1>Práctica 1</h1>
+        <h2>Práctica 1</h2>
         <p>En esta práctica pusimos en prueba los conocimientos vistos en la clase del 18-08, para crear nuestra propia página web.</p>
         <ul>
             <li><a href="https://github.com/Bere-ops/Practica_1.git">Repositorio de GitHub</a></li>
@@ -67,7 +67,7 @@
         <p> 8 al 10 de Septiembre.</p>
 
         <hr>
-
+        
         <h2>Práctica 6</h2>
         <p>Utilizamos flexbox para crear un documento HTML donde diseñamos lo que se muestra en la imagen siguiente:</p>
         <img src="img.png" alt="imagen de muestra de la práctica que debíamos de realizar">
@@ -77,6 +77,19 @@
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 10 al 12 de Septiembre.</p>
+
+        <hr>
+
+        <h1>Evidencia 2</h1>
+        <hr>
+        <h2>Práctica 1</h2>
+        <p>Creamos una calculadora en JavaScript para calcular el área de varias figuras.</p>
+        <p>Link</p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Bere-ops&since=2025-10-06&until=2025-10-06">Commit realizado</a></li>
+        </ul>
+        <h2>Fecha de los commits: </h2>
+        <p> 06 al 07 de Octubre.</p>
     </main>
     <aside></aside>
     <hr>
