--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -86,6 +86,11 @@
                     </li>
                 </ul>
             </section>
+            <section>
+                <h3>Evidencia 2 Practica 1</h3>
+                <p>Realizada el 6 de Octubre del 2025.</p>
+                <p>Se realizo ejercicio de area de figuras revisado por el maestro en clase</p>
+            </section>
         </article>
     </main>
     <aside></aside>
