--- a/diegoalgosa/Pasatiempos2/AMIGOS.html
+++ b/diegoalgosa/Pasatiempos2/AMIGOS.html
@@ -9,7 +9,7 @@
   <header><h1>Salir con Amigos</h1></header>
   <h2>Buena vida</h2>
 
-  <nav><a href="index.html">Volver al inicio</a></nav>
+  <nav><a href="index.HTML">Volver al inicio</a></nav>
 
   <main>
     <article>
