--- a/diegoalgosa/Pasatiempos2/GYM.html
+++ b/diegoalgosa/Pasatiempos2/GYM.html
@@ -9,7 +9,7 @@
   <header><h1>GYM</h1></header>
   <h2>Viva el dia de pecho</h2>
 
-  <nav><a href="index.html">Volver al inicio</a></nav>
+  <nav><a href="index.HTML">Volver al inicio</a></nav>
 
   <main>
     <article>
