--- a/diegoalgosa/Pasatiempos2/SERIES.html
+++ b/diegoalgosa/Pasatiempos2/SERIES.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Series</h1></header>
 
-  <nav><a href="index.html">Volver al inicio</a></nav>
+  <nav><a href="index.HTML">Volver al inicio</a></nav>
 
   <main>
     <article>
