--- a/diegoalgosa/Pasatiempos2/VIDEOJUEGOS.html
+++ b/diegoalgosa/Pasatiempos2/VIDEOJUEGOS.html
@@ -10,7 +10,7 @@
 
   <h2>wuuuu</h2>
 
-  <nav><a href="index.html">Volver al inicio</a></nav>
+  <nav><a href="index.HTML">Volver al inicio</a></nav>
 
   <main>
     <article>
