--- a/ivanmane/index.html
+++ b/ivanmane/index.html
@@ -52,6 +52,7 @@
         <h1>Evidencias Fundamentos de Dessarollo Web</h1>
     </header>
     <main>
+        <h2>Evidencia 1</h2>
         <section>
             <h2>Actividad 1</h2>
             <a href="https://github.com/ivanmane/webmane/blob/main/practica1.html">Repositorio</a>
@@ -85,6 +86,11 @@
             <a href="Practica 6/practica6.html">Link de pagina con diseños</a>
             <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-10&until=2025-09-12&author=ivanmane">Commits del 10 al 12 de septiembre</a>
         </section>
+        <h2>Evidencia 2</h2>
+        <section>
+            <h2>Practica 1</h2>
+            <a href="Evidencia 2/Practica 1/index.html">Link de calculadora</a>
+            <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ivanmane&since=2025-10-06&until=2025-10-07">Commits del 6 al 7 de Octubre</a>
     </main>
 </body>
 </html>
