Realizacion de la practica 1 de la evidencia 2

--- a/AlejandroRmzEsc/index.html
+++ b/AlejandroRmzEsc/index.html
@@ -61,6 +61,12 @@
                 <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=AlejandroRmzEsc&since=2025-09-10&until=2025-09-12" target="_blank">Commits</a>
             </div>
         </div>
+        <div class="evidencia">
+            <h2>Practica 7</h2>
+            <p>Elaboración de formulario para calcular figuras geometricas</p>
+
+            <mark>REALIZADO EN CLASE</mark>
+        </div>
     </div>
 </body>
 </html>
