agregue la practica 1 de la evidencia 2

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -100,6 +100,14 @@
                 </ul>
             </section>
         </article>
+        <div>
+            <h2 id="header-evidencias">Evidencia 2</h2>
+            <section>
+                <h3>Practica 1</h3>
+                <p>Realizada el 6 de Octubre del 2025.</p>
+                <p>En esta practica hicimos una calculadora de areas dinamica usando JavaScript. <br> La practica fue terminada en el salon de clases.</p>
+            </section>
+        </div>
     </main>
     <aside></aside>
     <footer></footer>
