Práctica 1 de la evidencia 2

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -16,7 +16,22 @@
 
             <section id="no-ev">
                 <header> 
-                    <h2>🔽 Evidencia 1 🔽</h2> 
+                    <h2> Evidencia 2 </h2> 
+                </header>
+            </section>
+
+            <section class="section">
+                <header id="no-practica">
+                    <h2>Práctica 1</h2>
+                </header>
+                <p>Se realizó en clase.</p>
+                <p><b>Fecha:</b> 06/10/2025</p>
+                <hr>
+            </section>
+
+            <section id="no-ev">
+                <header> 
+                    <h2> Evidencia 1 </h2> 
                 </header>
             </section>
 
