Practica 1 Evidencia 2 realizada en clase

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -12,7 +12,7 @@
         <main>
             <article>
                 <header>
-                    <h2>Links</h2>
+                    <h2>Evidencia 1</h2>
                 </header>
 
                 <section>
@@ -243,6 +243,31 @@
                             </li>
                         </ul>
                     </nav>
+
+                    <footer></footer>
+                </section>
+
+                <footer>
+                    <p>Desarrollado por Juan Antonio</p>
+                </footer>
+            </article>
+
+            <article>
+                <header>
+                    <h2>Evidencia 2</h2>
+                </header>
+
+                <section>
+                    <header>
+                        <h3>Práctica 1</h3>
+                    </header>
+
+                    <p>
+                        Programa que calcula el area de una figura con
+                        Javascript
+                    </p>
+
+                    <p>Se realizado en clase el dia 6 de octubre del 2025</p>
 
                     <footer></footer>
                 </section>
