--- a/FernandaGomezG/practica1ev2/index.html
+++ b/FernandaGomezG/practica1ev2/index.html
@@ -10,22 +10,22 @@
     <h1>Practica 1 Evidencia2</h1>
     <form action="">
         <label for="valor1">Base o lado:</label>
-        <input type="number" name="valor1" id="valor1">
+        <input type="text" name="valor1" id="valor1">
         
         <label for="valor2">Altura</label>
-        <input type="number" name="valor2" id="valor">
+        <input type="text" name="valor2" id="valor">
 
         <label for="comboFig">Seleccione la figura</label>
         <select name="comboFig" id="comboFig">
             <option value="1">Tráingulo</option>
             <option value="2">Rectángulo</option>
             <option value="3">Cuadrado</option>
+            </select>
 
         <label for="resultado">Área de la figura =</label>
-        <input type="number" name="resultado" id="resultado">
+        <input readonly type="text" name="resultado" id="resultado">
 
         <button id="boton">Calcular el área</button>
-
     </form>
     
     <script src="practica1ev2.js"></script>
