--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -75,6 +75,15 @@
             <h2>Practica 6</h2>
             <p>flexbox</p>
             <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/EddMont/Ev2_practica1/index.html" target="_blank">Link Pagina</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
+            </ul>
+        </article>
+
+        <article>
+            <h2>Practica 1 evidencia 2</h2>
+            <p>calculadora</p>
+            <ul>
                 <li><a href="https://fdw52ad2025.github.io/website52/EddMont/Practica6/index.html" target="_blank">Link Pagina</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
             </ul>
