--- a/FernandaGomezG/practica1ev2/index.html
+++ b/FernandaGomezG/practica1ev2/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <h1>Practica 1 Evidencia2</h1>
+
     <form action="">
         <label for="valor1">Base o lado:</label>
         <input type="text" name="valor1" id="valor1">
         
         <label for="valor2">Altura</label>
-        <input type="text" name="valor2" id="valor">
+        <input type="text" name="valor2" id="valor2">
 
-        <label for="comboFig">Seleccione la figura</label>
-        <select name="comboFig" id="comboFig">
+        <label for="figura">Seleccione la figura</label>
+        <select name="figura" id="figura">
             <option value="1">Tráingulo</option>
             <option value="2">Rectángulo</option>
             <option value="3">Cuadrado</option>
