--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -65,6 +65,15 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-10&until=2025-09-12" target="_blank">Commits realizados del 10 al 12 de septiembre</a></li>                    
                 </ol>
             </nav>
+            <h4 style="color: rgb(70, 70, 182);"> Evidencia 2</h4>
+            <p>Práctica 1</p>
+            <p>En está práctica creamos una calculadora con JavaScript y le aplicamos diseño</p>
+            <nav>
+                <ol>
+                    <li><a href="practica1ev2/index.html" target="_blank">Calculadora usando html y JavaScript</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-10-06&until=2025-10-07" target="_blank">Commits realizados del 6 al 7 de octubre</a></li>                    
+                    </ol>
+                </nav>
     </main>
     <aside></aside>
 
