coreccion de links de pagina practicas

--- a/luca384/index.html
+++ b/luca384/index.html
@@ -60,8 +60,8 @@
         <h2>Pratica 7: Calculadora de Areas</h2>
         <p>Se realizo una calculadora que calcula el area de diferentes figuras.</p>
         <ul class="links">
-            <li><a href="Practica7/index.html">Caluladora</a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384&since=2025-09-12&until=2025-09-12">Commits</a></li>
+            <li><a href="Ev2_Practicas/Practica7.html">Caluladora</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384&since=2025-10-07&until=2025-10-07">Commits</a></li>
         </ul>
 
     </header>
