Guardo archivos para continuar

--- a/ErickLTI/pasatiemposv2/pagina4.html
+++ b/ErickLTI/pasatiemposv2/pagina4.html
@@ -35,11 +35,16 @@
             </header>
             <!-- desarrollo -->
              <!-- nombre completo, edad, sexo, fecha nac., tel, correo, curp, cuenta con seguro?,acepto términos y condiciones (check box) -->
-                 <form action="">
+                    <form action="">
                     <p>
                         <label for="nombre">nombre:</label>
                         <input placeholder="Nombre completo" type="text" name="nombre" id="nombre">
                     </p>
+
+                    <form action="">
+                        
+
+                    </form>
 
                     <p>
                         <label for="edad">edad:</label>
@@ -57,6 +62,7 @@
                     <p>
                         <label for="Fecha">Fecha de nacimiento:</label>
                         <input type="date" name="fecha" id="fecha">
+
                     </p>
 
                     <p>
