--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>Evidencias Fundamentos Desarrollo Web </h1>
+        <h1>Evidencia 1</h1>
     </header>
     <main>
         <h2 style="color: rgb(70, 70, 182);"> Publicación de la práctica 1</h2>
@@ -65,7 +66,8 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-10&until=2025-09-12" target="_blank">Commits realizados del 10 al 12 de septiembre</a></li>                    
                 </ol>
             </nav>
-            <h4 style="color: rgb(70, 70, 182);"> Evidencia 2</h4>
+
+            <h1 style="color: rgb(70, 70, 182);"> Evidencia 2</h1>
             <p>Práctica 1</p>
             <p>En está práctica creamos una calculadora con JavaScript y le aplicamos diseño</p>
             <nav>
