--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                     </li>
                     <li id="a12"><a href="BernaGaspar/index.html">BernaGaspar</a></li>
                     <li id="a13">
-                        <a href="FernandaGomezG/index.html"
-                            >FernandaNohemiGomezGarcia</a
-                        >
+                        <a href="FernandaGomezG/index.html">FernandaNohemiGomezGarcia</a>
                     </li>
                     <li id="a14">
                         <a href="Alumno-2026415/index.html">Alumno-2026415 </a>
