--- a/1jecc/index.html
+++ b/1jecc/index.html
@@ -48,6 +48,14 @@
             <a class="a" href="https://github.com/FDW52AD2025/website52/commits/main/?author=1jecc&since=2025-09-10&until=2025-09-12">Enlace de commits</a>
         </div>
     </article>
+        <article class="box1">
+        <h1>Evidencia 2</h1>
+        <article class="box">
+            <h2 class="h2">Práctica 1</h2>
+            <p>Calculadora de figuras geometricas se realizo en clase</p>
+        </article>
+
+    </article>
 
 </body>
 </html>
