--- a/GiselleValerio1/index.html
+++ b/GiselleValerio1/index.html
@@ -25,6 +25,15 @@
         </ul>
     </section>
 
+    <section id="s3">
+    <h1>Evidencia 1</h1>
+    <h2>Practica 1</h2>
+    <ul>
+        <li><a href="https://github.com/GiselleValerio1/GNVA/commits/main/?since=2025-10-06&until=2025-10-07">Link Commits</a></li>
+        <p>Al tratar de tener el link de la pagina, mostraba que no tenia permisos para ver los Settings</p>
+    </ul>
+</section>
+
 </body>
 </html>
 
