--- a/GiselleValerio1/index.html
+++ b/GiselleValerio1/index.html
@@ -31,6 +31,8 @@
     <ul>
         <li><a href="https://github.com/GiselleValerio1/GNVA/commits/main/?since=2025-10-06&until=2025-10-07">Link Commits</a></li>
         <p>Al tratar de tener el link de la pagina, mostraba que no tenia permisos para ver los Settings</p>
+        <li><a href="https://fdw52ad2025.github.io/website52/GiselleValerio1/Evidencia2/Practica1/appCalculo.html">Link Aplicación Areas</a></li>
+        <p></p>
     </ul>
 </section>
 
