Cambios en los estilos de mi página principal

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -16,21 +16,6 @@
 
             <section id="no-ev">
                 <header> 
-                    <h2> Evidencia 2 </h2> 
-                </header>
-            </section>
-
-            <section class="section">
-                <header id="no-practica">
-                    <h2>Práctica 1</h2>
-                </header>
-                <p>Se realizó en clase.</p>
-                <p><b>Fecha:</b> 06/10/2025</p>
-                <hr>
-            </section>
-
-            <section id="no-ev">
-                <header> 
                     <h2> Evidencia 1 </h2> 
                 </header>
             </section>
@@ -65,7 +50,7 @@
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
                         <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/index.html">PERFIL PERSONAL DE LA ORGANIZACIÓN</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO DE LA ORGANIZACIÓN</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DENTRO DE LA ORGANIZACIÓN</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -86,7 +71,7 @@
                 <header id="no-practica">
                     <h2>Práctica 4</h2>
                 </header>
-                <p>Para esta actividad, lo que hice fue aplicarle un estilo personalizado a mi boton personal de la página de la organización del gpo 52.</p>
+                <p>Para esta actividad, apliqué un estilo personalizado a mi botón personal dentro de la página de la organización del grupo 52.</p>
                 <p>Fecha de los commits:  1 al 3 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
@@ -98,7 +83,7 @@
                 <header id="no-practica">
                     <h2>Práctica 5</h2>
                 </header>
-                <p>Tomando como base a la Practica 3 (la segunda versión de "Mis pasatiempos"), crearemos un sitio en donde se muestren las capturas de cada selector CSS implementados en la práctica antes mencionada.</p>
+                <p>Tomando como base la Práctica 3, crearemos un sitio web en el que se muestren las capturas de pantalla de cada selector CSS implementado en dicha práctica.</p>
                 <ul>
                     <li>Selector universal</li>
                     <li>Selector de tipo</li>
@@ -138,14 +123,27 @@
                 <hr>    
             </section>
 
+            <section id="no-ev">
+                <header> 
+                    <h2> Evidencia 2 </h2> 
+                </header>
+            </section>
+
+            <section class="section">
+                <header id="no-practica">
+                    <h2>Práctica 1</h2>
+                </header>
+                <p>Se realizó en clase.</p>
+                <p><b>Fecha:</b> 06/10/2025</p>
+                <hr>
+            </section>
+
         </article>
     </main>
     <aside></aside>
     <footer class="datos-personales">
         <address>
-            <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
-            <p>Matricula: 2088379</p>
-            <p>Grupo: 52</p>
+            <p>&copy Desarrollado por el alumno: Hugo Alejandro Zapata Rosales - 2088379</p>
         </address>
     </footer>
 </body>
