Correción de errores en mi página principal

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -31,7 +31,7 @@
                     <li>La Calistenia (1 commit)</li>
                     <li>La Escritura (1 commit)</li>
                 </ul>
-                <p>Fecha de los commits: 13 al 15 de Agosto.</p>
+                <p><b>Fecha de los commits:</b> 13/08/2025 - 15/08/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -45,7 +45,7 @@
                     <h2>Práctica 2</h2>
                 </header>
                 <p>Para esta práctica se creó una carpeta personal en la organización del gpo 52 y se agregó un archivo llamado <i>index.html</i> en el que se adjuntarán todas las evidencias de aprendizaje.</p>
-                <p>Fecha de los commits: 20 al 22 de Agosto.</p>
+                <p><b>Fecha de los commits:</b> 20/08/2025 - 22/08/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -58,7 +58,7 @@
                     <h2>Práctica 3</h2>
                 </header>
                 <p>Para esta actividad modificaremos la Práctica 1 (la página de los pasatiempos personales que desarrolle en mi repositorio personal), esto con el objetivo de crear una segunda versión en la que utilizaremos las etiquetas vistas recientemente en clase, pero esta vez se guardará en la organización del gpo 52. En este caso, usaremos cinco archivos HTML para colocar cada uno de los pasatiempos, incluyendo un archivo CSS para los estilos.</p>
-                <p>Fecha de los commits: 27 al 29 de Agosto.</p>
+                <p><b>Fecha de los commits:</b> 27/08/2025 - 29/08/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -72,7 +72,7 @@
                     <h2>Práctica 4</h2>
                 </header>
                 <p>Para esta actividad, apliqué un estilo personalizado a mi botón personal dentro de la página de la organización del grupo 52.</p>
-                <p>Fecha de los commits:  1 al 3 de Septiembre.</p>
+                <p><b>Fecha de los commits:</b> 01/09/2025 - 03/09/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -96,7 +96,7 @@
                     <li>Selector hermano adyacente</li>
                     <li>Selector hermano general</li>
                 </ul>
-                <p>Fecha de los commits: 8 al 10 de Septiembre.</p>
+                <p><b>Fecha de los commits:</b> 08/09/2025 - 10/09/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -106,13 +106,13 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Prática 6</h2>
+                    <h2>Práctica 6</h2>
                 </header>
                 <p>En esta práctica crearemos un documento HTML (utilizando flexbox) en donde se diseñará lo que se muestra en la siguiente imagen:</p>
                 <figure>
                     <center><img src="practica-6/imgs/practica6_img.png" alt=""></center>
                 </figure>
-                <p>Fecha de los commits: 10 al 12 de Septiembre.</p>
+                <p><b>Fecha de los commits:</b> 10/09/2025 - 12/09/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
@@ -134,7 +134,7 @@
                     <h2>Práctica 1</h2>
                 </header>
                 <p>Se realizó en clase.</p>
-                <p><b>Fecha:</b> 06/10/2025</p>
+                <p><b>Fecha:</b> 06/10/2025 - 07/10/2025</p>
                 <hr>
             </section>
 
