--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -162,7 +162,32 @@
 
                 <p>Enlaces requeridos:</p>
                 <ul>
-                    <li>Enlace commit en clase 06/10/2025: <a href="" target="_blank"></a>modificar</li>
+                    <li>Enlace commit en clase 06/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-06" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-06</a></li>
+                </ul>
+
+            </article>
+        </section>
+
+        <hr>
+
+        <section id="Ev2P2">
+            <article>
+                <header>
+                    <h2>Práctica 2</h2>
+                </header>
+
+                <p>Diseñar una página que contenga un boton y al dar click genere una tabla con la siguiente información:</p>
+                <pre>
+                    1 2 3
+                    4 5 6 
+                    7 8 9
+                </pre>
+
+                <p>Enlaces requeridos:</p>
+
+                <ul>
+                    <li>Enlace práctica: <a href="modificar"></a></li>
+                    <li>Enlace commits: <a href="modificar"></a></li>
                 </ul>
 
             </article>
