--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -186,8 +186,8 @@
                 <p>Enlaces requeridos:</p>
 
                 <ul>
-                    <li>Enlace práctica: <a href="modificar"></a></li>
-                    <li>Enlace commits: <a href="modificar"></a></li>
+                    <li>Enlace práctica: <a href="JSP2/index.html">Práctica 2 JS</a></li>
+                    <li>Enlace commits: <a href="modificar">modificar</a></li>
                 </ul>
 
             </article>
