Realización de la practica 2

--- a/SunnyWiltshire/index.html
+++ b/SunnyWiltshire/index.html
@@ -104,6 +104,14 @@
                 <p>Realización de un formulario que calcule las areas de un circulo, rectangulo y cuadrado, Se realizó en clase el 06 de Octubre.</p>
                 
                 <hr>
+
+                <h3 id="Ev2P2">Práctica 3</h3>
+
+                <p>Realización de un botón que realiza una tabla simulando un Sudoku.</p>
+
+                <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/Ev2P2/index.html">Página</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-10-13&until=2025-10-14">Link de los commits.</a></li>
+                    
             </section>
         </article>
     </main>
@@ -122,6 +130,7 @@
         <p>Evidencia 2:</p>
         <ul>
             <li><a href="#Ev2P1">Práctica 1</a></li>
+            <li><a href="#Ev2P2">Práctica 2</a></li>
         </ul>
     </aside>
     <footer>
