--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -127,6 +127,25 @@
             <h2> Fechas de elaboración de la práctica</h2>
                 <p>Del miercoles 10 al viernes 12 de septiembre.</p>
     </section>
+
+    <!-- Sección de práctica 1 evidencia 2 -->
+    <section>
+        <header>
+            <h2>Práctica 1 - Evidencia 2</h2>
+        </header>
+    <!-- Descripción de la práctica 6 -->    
+        <p>En esta práctica nos encargamos de crear una aplicación para el cálculo de las areas de tres figuras: Triangulo, Rectangulo y Cuadrado.<br>Utilizar las cajas de texto valor 1 y valor 2 como entrada para realizar los cálculos.</p>
+    <!-- Links práctica 1 - evidencia 2 -->    
+            <h2> LINKS </h2>
+                <ul class="links">
+                <li><a href="evidencia2/practica1/index.html">Aplicación práctica 1 - Evidencia 2</a></li>
+                <li><a href="">Link de commits</a></li>
+                </ul>
+            <img src="" alt="">
+    <!-- Fecha de elaboración de práctica 1 - Evidencia 2 -->
+            <h2> Fechas de elaboración de la práctica</h2>
+                <p>Del 6 al 7 de octubre..</p>
+    </section>
     
     <footer class="main-footer">
         <p>© 2025 - Fernando Nicolás Molina Ramírez</p>
