agregamos estructura e imagen en index del alumno

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -141,7 +141,7 @@
                 <li><a href="evidencia2/practica1/index.html">Aplicación práctica 1 - Evidencia 2</a></li>
                 <li><a href="">Link de commits</a></li>
                 </ul>
-            <img src="" alt="">
+            <img src="evidencia2/practica1/img/practica1.png" alt="">
     <!-- Fecha de elaboración de práctica 1 - Evidencia 2 -->
             <h2> Fechas de elaboración de la práctica</h2>
                 <p>Del 6 al 7 de octubre..</p>
