--- a/F-rn-ndo/evidencia2/practica1/index.html
+++ b/F-rn-ndo/evidencia2/practica1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencia 2 - Práctica 1</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilo.css">
     <script src="main.js"></script>
 </head>
 <body>
