Practica 2, evidencia 2 realizada.

--- a/aLe.php27/practicaciclos/index.html
+++ b/aLe.php27/practicaciclos/index.html
@@ -9,7 +9,8 @@
     <audio src="brasilciclos.mp3" autoplay loop></audio>
 </head>
 <body>
-    <h1>Practica 2</h1>
+    <h1>Practica 2 - Ciclos y createElement</h1>
+    <br>
     <button id="boton">Ejecutar</button>
         <table id="tabla">
             <tr>
