--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -75,6 +75,11 @@
         <h1>PRÁCTICAS EVIDENCIA 2</h1>
         <h1>PRÁCTICA 1</h1>
         <p> Esta práctica se hizo en clase 😊</p>
+        
+        <h1>PRÁCTICA 2 - SUDOKU</h1>
+        <a href="https://github.com/MiguelABanda/Practica2EV2">Link del Repositorio</a>
+        <a href="https://github.com/MiguelABanda/Practica2EV2/commits/main/?since=2025-10-13&until=2025-10-13 ">Link de los commits</a>
+        <a href="https://miguelabanda.github.io/Practica2EV2/ ">Link de la página web</a>
     
     </main>
     <aside></aside>
