--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -60,6 +60,8 @@
             <section>
                 <h2>Práctica 1</h2>
                 <p>Práctica de calculo de áreas de triángulo, rectángulo o cuadrado, realizada en clase el 06/10/2025</p>
+                <h2>Práctica 2</h2>
+                <p>En esta segunda práctica realicé una tabla con los números del 1 al 9 simulando un sudoku</p>
             </section>
         </article>
     </main>
