--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -90,6 +90,17 @@
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 06 al 07 de Octubre.</p>
+
+        <hr>
+        <h2>Práctica 2</h2>
+        <p>Diseñamos una página que contenga un botón y al dar click se genere una tabla como la de Sudoku.</p>
+        <p>Links</p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Bere-ops&since=2025-10-13&until=2025-10-13">Commit realizado</a></li>
+            <li><a href="https://fdw52ad2025.github.io/website52/Bere-ops/EV2_Prac2/index.html">Página</a></li>
+        </ul>
+        <h2>Fecha de los commits: </h2>
+        <p> 13 al 14 de Octubre.</p>
     </main>
     <aside></aside>
     <hr>
