--- a/BernaGaspar/Evidencia2/Practica2/index_sodoku.html
+++ b/BernaGaspar/Evidencia2/Practica2/index_sodoku.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aplicacion Sodoku</title>
+    <link rel="stylesheet" href="estilos_sodoku.css">
+</head>
+<body>
+    <header><h1>Tabla sodoku desde JavaScript</h1></header>
+    
+    <script src="main_sodoku.js"></script>
+</body>
+</html>
