--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -134,10 +134,26 @@
                     <h2>Práctica 1</h2>
                 </header>
                 <p>Se realizó en clase.</p>
-                <p><b>Fecha:</b> 06/10/2025 - 07/10/2025</p>
+                <p><b>Fecha de los commits:</b> 06/10/2025 - 07/10/2025</p>
                 <hr>
-            </section>
+                <header id="no-practica">
+                    <h2>Práctica 2</h2>
+                </header>
+                <p>En esta práctica debemos diseñar una página web (utilizando JavaScript) que contenga un botón que, al momento de hacer clic, genere una tabla con la siguiente información:</p>
+                <figure>
+                    <center><img src="practica-6/imgs/tabla.png" alt=""></center>
+                </figure>
+                <p><b>Fecha de los commits:</b> 13/10/2025 - 14/10/2025</p>
+                <nav>
+                    <h4>Enlaces de GitHub:</h4>
+                    <ul id="boton">
+                        <li><a target="_blank" href="">La página NO esta lista</a></li>
+                        <li><a target="_blank" href="">Los commits NO se han agregado </a></li>
+                    </ul>
+                </nav>
+                <hr>
 
+            </section>
         </article>
     </main>
     <aside></aside>
