--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -78,6 +78,20 @@
         <h2>Evidencia 2.</h2>
         <h3>Práctica 1.</h3>
         <p>Práctica Realizada en Clase.</p>
+        <hr>
+        <h3>Práctica 2</h3>
+        <p>En esta práctica se realizó un mini sudoku que tendra la siguiente estructura: </p>
+        <pre>
+            1 2 3
+            4 5 6 
+            7 8 9
+        </pre>
+        <p>Realizado entre el 13 y 14 de octubre del 2025.</p>
+        <nav>
+            <ul>
+                <li><a href="Evidencia2/practica2.html">Práctica 2</a></li>
+            </ul>
+        </nav>
     </main>
     <aside></aside>
     <footer>
