--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -91,6 +91,12 @@
                 <p>Realizada el 6 de Octubre del 2025.</p>
                 <p>Se realizo ejercicio de area de figuras revisado por el maestro en clase</p>
             </section>
+                        <section>
+                <h3>Evidencia 2 Practica 2</h3>
+                <p>Realizada el 13 de Octubre del 2025.</p>
+                <p>Se creo tabla con dos ciclos y createelement</p>
+                <p>Commits: </p>
+            </section>
         </article>
     </main>
     <aside></aside>
