--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -95,8 +95,10 @@
                 <h3>Evidencia 2 Practica 2</h3>
                 <p>Realizada el 13 de Octubre del 2025.</p>
                 <p>Se creo tabla con dos ciclos y createelement</p>
-                <p>Commits: </p>
-            </section>
+                 <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/52898f8c3223b2024a43ed587fc99f7e01881c71">Enlace commits</a>
+                </ul>
+             </section>
         </article>
     </main>
     <aside></aside>
