Avance de la práctica 2 Ev2

--- a/Hugo-0699/ev2_practica-2/index.html
+++ b/Hugo-0699/ev2_practica-2/index.html
@@ -7,8 +7,36 @@
     <title>JavaScript: CICLOS</title>
 </head>
 <body>
-    <h1>Tabla</h1>
-
-    <script src="main.js"></script>
+    <main>
+        <h1>Ciclos con JavaScript</h1>
+        <section>
+            <center><button id="boton">Ejecutar</button></center>
+        
+            <h2>Tabla</h2>
+            <table id="tabla">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </section>
+        <script src="main.js"></script>
+    </main>
+    <footer>
+        <address>
+            <p>&copy Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
+        </address>
+    </footer>
 </body>
 </html>
