Finalizacion de la practica 2 Ev2

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -284,12 +284,19 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="./" target="_blank">
+                                <a
+                                    href="Ev2Practica2/index.html"
+                                    target="_blank"
+                                >
                                     Link del programa
                                 </a>
                             </li>
                             <li>
-                                <a href="./" target="_blank">Link Commits</a>
+                                <a
+                                    href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-10-12&until=2025-10-14"
+                                    target="_blank"
+                                    >Link Commits</a
+                                >
                             </li>
                         </ul>
                     </nav>
