--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -114,9 +114,21 @@
                 <p>Creamos una "App" donde calculamos el area de la figura requerida, ya sea del Triangulo, Rectangulo ó Cuadrado.</p>
                 <p><b>Hecho en Clase &#x2705;</b></p>
                 <ul>
-                    <li><a href="">Link Commits</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?author=Bejesusrey&since=2025-10-06&until=2025-10-07">Link Commits</a></li>
                 </ul>
                 <p><b>Fecha de Commits: 6 al 7 de Octubre</b></p>
+            </article>
+        </section>
+
+        <section>
+            <h2>Segunda Practica Ev2</h2>
+            <article>
+                <p>Creamos una "App" donde mostramos el diseño de un Sodoku.</p>
+                <ul>
+                    <li><a href="">Link Aplicación Tabla</a></li>
+                    <li><a href="">Link Commits</a></li>
+                </ul>
+                <p><b>Fecha de Commits: 13 al 14 de Octubre</b></p>
             </article>
         </section>
 
