--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -187,7 +187,7 @@
 
                 <ul>
                     <li>Enlace práctica: <a href="JSP2/index.html">Práctica 2 JS</a></li>
-                    <li>Enlace commits 13/10/2025 al 14/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14</a></li>
+                    <li>Enlace commits 13/10/2025 al 14/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14</a></li>
                 </ul>
                 
 
@@ -195,6 +195,13 @@
         </section>
 
         <hr>
+
+        <section>
+            <article>
+                <header></header>
+
+            </article>
+        </section>
 
 
     </main>
